--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "A consolidated list app",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.11.2"
+    "express": "^4.11.2",
+    "morgan": "^1.5.1"
   },
   "devDependencies": {},
   "scripts": {
