--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.11.2",
-    "morgan": "^1.5.1"
+    "morgan": "^1.5.1",
+    "body-parser": "^1.12.0",
+    "mongodb": "~2.0"
   },
   "devDependencies": {},
   "scripts": {
